--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.25.0",
     "lenis": "^1.3.17",
     "next": "16.1.1",
